* fixes some spacing

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,89 +1,96 @@
 html {
-  --primary-color: #2D2A63;
-  --secondary-color: #EC5032;
-  --tertiary-color: #ed9f05;
-  --quaternary-color: #ADD2D8;
+  --color-primary: #2D2A63;
+  --color-secondary: #EC5032;
+  --color-tertiary: #ed9f05;
+  --color-quaternary: #ADD2D8;
   --transition: 0.2s ease;
-  font-family: -apple-system, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-family: 'Circular Std Book';
+  font-family: 'Circular Std Book', Roboto, 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-size: 110%;
   color: #2c3333;
 }
 h1, h2, h3 {
-  color: var(--primary-color);
+  color: var(--color-primary);
   margin-top: 1.5rem;
   margin-bottom: 1rem;
 }
 a {
   text-decoration: none;
-  color: var(--secondary-color);
+  color: var(--color-secondary);
   font-weight: bold;
   padding: 0.6rem;
   transition: color var(--transition);
 }
 a:hover {
-  color: var(--secondary-color);
+  color: var(--color-secondary);
 }
+
 .header, .footer {
   text-align: center;
   padding: 1rem 0;
 }
+
 .navigation ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-.navigation ul li {
-  display: inline-block;
-}
-.navigation ul li a {
-  display: block;
-}
+  .navigation ul li {
+    display: inline-block;
+  }
+  .navigation ul li a {
+    display: block;
+  }
+
 .main {
   flex-grow: 1;
 }
-.section a {
-  padding-left: 0;
-}
-.section p {
-  margin-top: 0.5em;
-}
-.section .about > p {
-  margin-bottom: 0;
-}
+  .section a {
+    padding-left: 0;
+  }
+  .section p {
+    margin-top: 0.5em;
+  }
+  .section .about > p {
+    margin-bottom: 0;
+  }
+
 .footer {
   margin-top: 2rem;
   position: relative;
   bottom: 0;
 }
-.footer .navigation ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.footer .navigation ul li a img {
-  width: 36px;
-  opacity: 0.8;
-  transition: opacity var(--transition);
-}
-.footer .navigation ul li a:hover img {
-  opacity: 1;
-}
+  .footer .navigation ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .footer .navigation ul li a img {
+    width: 36px;
+    opacity: 0.8;
+    transition: opacity var(--transition);
+  }
+  .footer .navigation ul li a:hover img {
+    opacity: 1;
+  }
+
 .copy {
   margin-top: 0;
 }
+
 /* #### Generated By: http://www.cufonfonts.com #### */
 @font-face {
   font-family: 'Circular Std Book';
   font-style: normal;
   font-weight: normal;
   font-display: fallback;
-  src: local('Circular Std Book'), url('../assets/fonts/CircularStd-Book.woff') format('woff');
+  src: local('Circular Std Book'),
+       url('../assets/fonts/CircularStd-Book.woff') format('woff');
 }
 @font-face {
   font-family: 'Circular Std Bold';
   font-style: normal;
   font-weight: normal;
   font-display: fallback;
-  src: local('Circular Std Bold'), url('../assets/fonts/CircularStd-Bold.woff') format('woff');
+  src: local('Circular Std Bold'),
+       url('../assets/fonts/CircularStd-Bold.woff') format('woff');
 }
